Read Me Updated

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-Hello World.
+Hello World. 
+fluidIA - agile UI prototyping
+Jakub Linowski, 2008 March
+------------------------------------------
+GPL 2.0 License
