--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-Hello World.
-From JakubBranch
+Hello World. 
+fluidIA - agile UI prototyping
+Jakub Linowski, 2008 March
+------------------------------------------
+GPL 2.0 License
