--- a/README
+++ b/README
@@ -29,3 +29,16 @@ You may exercise the freedoms specified here provided that you comply with the e
 
 Any of the above conditions can be waived if you get permission from the copyright holder.
 
+
+
+
+-------------------------------
+CREDITS
+
+jQuery 
+http://jquery.com/
+
+jQuery Download Plugin
+
+AJAX Upload Plugin
+http://valums.com/ajax-upload/
